--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title: Beckham's Portfolio # This is what shows up in the tab of the browser
 
 # Hero Section
 name: Beckham Benny Ross
-headline: Systems Engineering Project 1
+headline: SIT Robotics Systems Student | Skilled in ROS 1 | Systems Engineering
 description: >- # dont remove this line. this will ignore all new lines until the next section
   I’m a Robotics Systems student at the Singapore Institute of Technology (SIT), with a strong foundation in robotic technologies and a growing passion for intelligent automation. I specialize in the Robot Operating System (ROS), with hands-on experience developing, testing, and integrating robotic software across simulation and real-world platforms. My academic and project experiences have equipped me with practical skills in ROS, C/C++, Python and Spin.
 
