--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ profile_image: ./assets/images/profile-image/Me.jpg
 
 # Link your resume
 # You can place your resume in assets/resume/{resume file.pdf} or add external link such as pdf saved in google drive 
-resume-url: ./assets/images/resume/Beckham's-Resume.pdf
+resume-url: Beckhams-Resume.pdf
 
 
 # Set up external links - this will show up as small icons next to your name.
