--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ resume-url: ./assets/resume/Beckhams-Resume.pdf
 external-links:    # input only your own url slug. The icons with missing entries will not appear.
   linkedin: beckham-benny-ross-sit-robotics-system    # https://www.linkedin.com/in/{your url slug} 
   github: Beckhambenny2000/Systems-Engineering-Project-1    # https://github.com/{your url slug} 
-  stackoverflow: test      # https://stackoverflow.com/users/{your url slug}
+  stackoverflow:      # https://stackoverflow.com/users/{your url slug}
   medium:            # https://medium.com/@{your url slug} 
   x-twitter:   # https://x.com/{your url slug} 
   threads:            # https://threads.net/@{your url slug} 
@@ -65,7 +65,7 @@ skills:
   
 
 # Contact Form Setup. Setup an account and copy over the key. When someone fills out the form, it will be received in your email.
-formspree-key:   https://formspree.io/f/{8-digit key}
+formspree-key:   xwpqvnwl
 
 
 
